--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.9",
+    "masonry": "0.0.2",
     "vue": "^2.5.2",
+    "vue-masonry": "^0.11.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue-waterfall-easy": "^2.1.4",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
