--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "date-time-picker": "^0.5.2",
     "element-ui": "^2.3.9",
     "masonry": "0.0.2",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-masonry": "^0.11.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-waterfall-easy": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
