--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.clonedeep": "^4.5.0",
     "masonry": "0.0.2",
     "mint-ui": "^2.2.13",
+    "v-calendar": "^0.9.7",
     "vue": "^2.5.2",
     "vue-masonry": "^0.11.1",
     "vue-router": "^3.0.1"
