--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lodash.clonedeep": "^4.5.0",
     "masonry": "0.0.2",
     "mint-ui": "^2.2.13",
+    "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
     "vue-masonry": "^0.11.1",
+    "vue-pickers": "^1.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
