--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ajv": "^6.0.0",
     "axios": "^0.18.0",
+    "clipboard": "^2.0.1",
     "element-ui": "^2.3.9",
     "lodash": "^4.17.10",
     "lodash.clonedeep": "^4.5.0",
