--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.10",
     "lodash.clonedeep": "^4.5.0",
     "masonry": "0.0.2",
-    "mint-ui": "^2.2.13",
+    "mint-ui": "2.2.13",
     "v-calendar": "^0.9.7",
     "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
