--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "^2.5.2",
     "vue-masonry": "^0.11.1",
     "vue-pickers": "^1.0.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
