--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lodash.clonedeep": "^4.5.0",
     "masonry": "0.0.2",
     "mint-ui": "2.2.13",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
     "v-calendar": "^0.9.7",
     "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
