--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mint-ui": "2.2.13",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "v-calendar": "^0.9.7",
     "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
@@ -49,7 +50,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
