修改分类 以及修改订单 以及修改部分class 名称

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-masonry": "^0.11.1",
     "vue-pickers": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vue-wechat-title": "^2.0.4"
   },
   "devDependencies": {
