--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
     "vue-wechat-title": "^2.0.4",
-    "vux": "^2.9.2",
-    "vux-loader": "^1.2.9"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -82,7 +81,6 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "vux-loader": "^1.2.9",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
