--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "clipboard": "^2.0.1",
+    "cube-ui": "^1.9.9",
     "element-ui": "^2.3.9",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
