--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lodash": "^4.17.10",
     "lodash.clonedeep": "^4.5.0",
     "masonry": "0.0.2",
-    "mint-ui": "2.2.13",
+    "mint-ui": "^2.2.13",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
